<resources>
    <string name="app_name">Debt book</string>
    <string name="name">Title</string>
    <string name="sum">Sum</string>
    <string name="comment">Comment</string>
    <string name="year">y.</string>
    <string name="date">Date</string>
    <string name="usd" translatable="false">&#127482;&#127480; USD</string>
    <string name="eur" translatable="false">&#127466;&#127482; EUR</string>
    <string name="rub" translatable="false">&#127479;&#127482; RUB</string>
    <string name="byn" translatable="false">&#127463;&#127486; BYN</string>
    <string name="uah" translatable="false">&#127482;&#127462; UAH</string>
    <string name="kzt" translatable="false">&#127472;&#127487; KZT</string>
    <string name="jpy" translatable="false">&#127471;&#127477; JPY</string>
    <string name="gpb" translatable="false">&#127468;&#127463; GPB</string>
    <string name="aud" translatable="false">&#127462;&#127482; AUD</string>
    <string name="cad" translatable="false">&#127464;&#127462; CAD</string>
    <string name="chf" translatable="false">&#127464;&#127469; CHF</string>
    <string name="cny" translatable="false">&#127464;&#127475; CNY</string>
    <string name="sek" translatable="false">&#127480;&#127466; SEK</string>
    <string name="mxn" translatable="false">&#127474;&#127485; MXN</string>
    <string name="pln" translatable="false">&#127477;&#127473; PLN</string>
    <string name="aed" translatable="false">&#127462;&#127466; AED</string>
    <string name="ron" translatable="false">&#127479;&#127476; RON</string>
    <string name="sar" translatable="false">&#127480;&#127462; SAR</string>
    <string name="rsd" translatable="false">&#127479;&#127480; RSD</string>
    <string name="tjs" translatable="false">&#127481;&#127471; TJS</string>
    <string name="tryс" translatable="false">&#127481;&#127479; TRY</string>
    <string name="uzs" translatable="false">&#127482;&#127487; UZS</string>
    <string name="mnt" translatable="false">&#127474;&#127475; MNT</string>
    <string name="czk" translatable="false">&#127464;&#127487; CZK</string>
    <string name="azn" translatable="false">&#127462;&#127487; AZN</string>
    <string name="amd" translatable="false">&#127462;&#127474; AMD</string>
    <string name="bgn" translatable="false">&#127463;&#127468; BGN</string>
    <string name="ils" translatable="false">&#127470;&#127473; ILS</string>
    <string name="youmustentername">You didn\'t enter all the information</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="give">Give</string>
    <string name="take">Take</string>
    <string name="zerodebt">This field cannot be zero</string>
    <string name="payoffMessage">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="No">No</string>
    <string name="newdebt">Add new debt</string>
    <string name="editdebtcollaps">Edit debt</string>
    <string name="debts">Debts</string>
    <string name="nodebts">There are no debts yet. Click the button below to add.</string>
    <string name="show_all">Show all debts</string>
    <string name="show_positive">Show positive debts</string>
    <string name="show_negative">Show negative debts</string>
    <string name="filter">Filter</string>
    <string name="contacts">Contacts</string>
    <string name="no_permission">No permission</string>
    <string name="contact_name" >Contact name</string>
    <string name="settings">Settings</string>
    <string name="app_version">App version</string>
    <string name="system_theme">System</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>
    <string name="email_subject">Email about Simple Debt Book app, version </string>
    <string name="review_hint">Tell us about your experience</string>
    <string name="review_dialog_title">Review</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="later">Later</string>
    <string name="continue_b">Continue</string>
    <string name="rate_app_toast">Please, rate app by click on stars</string>
    <string name="app_already_rated_hint">Sorry, app is already rated</string>
    <string name="main_currencies_hint">Statistics of these currencies will be displayed on the main screen</string>
    <string name="first_main_currency">First main currency</string>
    <string name="second_main_currency">Second main currency</string>
    <string name="default_currency">Default currency</string>
    <string name="default_currencies_hint">This currency will be selected by default when adding new debts</string>
    <string name="detailed_share_text_hint">Add the total amount at the time of the debt to \'\'share\'\' text.\nExample: 01.01.2001: 10 USD (Comment) (25 USD)</string>
    <string name="more_detailed_share_text">More detailed \'\'share\'\' text</string>
    <string name="app_theme">App Theme</string>
    <string name="rate_app">Rate app</string>
    <string name="write_email_to_developer">Write email to developer</string>
    <string name="main_recycler_view_hint">Tap for more information</string>
    <string name="details_recycler_view_hint">Tap for more features</string>
    <string name="excel_folder_toast_hint">File saved in Storage/Documents/DebtBookFiles</string>
    <string name="share_debt_in">Share debt in</string>
    <string name="text_format">Text format</string>
    <string name="excel_format">Excel format</string>
    <string name="error">Something went wrong…</string>
    <string name="order_debt_sum">Debt sum</string>
    <string name="order_by_creation_date">Creation date</string>
    <string name="order_by_last_debt_date">Last debt date</string>
    <string name="order_by_date">Date</string>
    <string name="order_by">Order by</string>
    <string name="remember_choice">Remember choice</string>
    <string name="confirm">Confirm</string>
    <string name="save">Save</string>
    <string name="not_selected">Not selected</string>
    <string name="cancel">Cancel</string>
    <string name="application">Application</string>
    <string name="info">Info</string>
    <string name="support">Support</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="long_tap_to_change_the_name_of_the_debt">Long tap to change the name of the debt</string>
    <string name="change_debt_name">Change debt name</string>
    <string name="select_currency">Select currency</string>
    <string name="a11y_currency_picker">Select currency, %1$s</string>
    <string name="payoffTitle">Delete this debt</string>
    <string name="loading">Loading…</string>
    <string name="synchronization">Synchronization</string>
    <string name="authorize_to_avoid_losing_your_data">Authorize to avoid losing your data</string>
    <string name="authorization">Authorization</string>
    <string name="account">Account</string>
    <string name="synchronize">Synchronize</string>
    <string name="log_out">Log out</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="by_authorizing_you_agree_to_the">By authorizing, you agree to the %1$s</string>
    <string name="privacy_policy_in_agreement">Privacy policy</string>
    <string name="this_function_will_restore_your_data_from_cloud">This function will restore your data from cloud</string>
    <string name="restore_data">Restore data</string>
    <string name="the_data_has_not_yet_been_synchronized">The data has not yet been synchronized</string>
    <string name="recover_all_data_from_the_cloud_this_will_delete_the_current_application_data">Restore all data from the cloud? This will delete the current application data.</string>
    <string name="do_you_really_want_to_log_out">Do you really want to log out?</string>
    <string name="last_synchronization">Last synchronization:</string>
    <string name="finances">Finances</string>
    <string name="category">Category</string>
    <string name="you_must_select_category">You must select category!</string>
    <string name="revenues">Revenues</string>
    <string name="expenses">Expenses</string>
    <string name="categories">Categories</string>
    <string name="history">History</string>
    <string name="create_new_category">Create new category</string>
    <string name="adding">Adding</string>
    <string name="image">Image</string>
    <string name="color">Color</string>
    <string name="you_must_select_color">You must select color!</string>
    <string name="you_must_select_image">You must select image!</string>
    <string name="select_interval">Select interval</string>
    <string name="there_are_no_revenues_yet_click_the_button_below_to_add">There are no incomes yet.\nClick the button below to add.</string>
    <string name="there_are_no_expenses_yet_click_the_button_below_to_add">There are no expenses yet.\nClick the button below to add.</string>
    <string name="health">Health</string>
    <string name="entertainment">Entertainment</string>
    <string name="home">Home</string>
    <string name="education">Education</string>
    <string name="presents">Gifts</string>
    <string name="food">Food</string>
    <string name="other">Other</string>
    <string name="salary">Salary</string>
    <string name="investments">Investments</string>
    <string name="add">Add</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year_full">Year</string>
    <string name="delete_category">Delete category</string>
    <string name="there_are_no_expenses_yet">There are no expenses yet</string>
    <string name="there_are_no_incomes_yet">There are no incomes yet</string>
    <string name="this_action_will_delete_the_category_and_all_data_associated_with_it">This action will delete this category and all associated data</string>
    <string name="support_us">Support us</string>
    <string name="goals">Goals</string>
    <string name="add_new_goal">Add new goal</string>
    <string name="there_are_no_goals_yet_click_the_button_below_to_add">There are no goals yet. Click the button below to add.</string>
    <string name="remaining">remaining</string>
    <string name="already_saved_sum">Already saved sum</string>
    <string name="overdue">Overdue</string>
    <string name="congratulations_you_have_reached_your_goal">&#x1F389;&#x1F389;&#x1F389;\nCongratulations! You have reached your goal!</string>
    <string name="achieved_in_days">Achieved in %1$d days</string>
    <string name="achieved_in_day">Achieved in %1$d day</string>
    <string name="goal_s_photo">Goal photo</string>
    <string name="subtract">Subtract</string>
    <string name="it_s_empty_here_for_now">It\'s empty here for now</string>
    <string name="already_saved_sum_can_t_be_greater_than_the_goal_sum">Already saved sum can`t be greater than the goal sum</string>
    <string name="goal_deadline">Goal deadline</string>
    <string name="goal_sum_must_be_positive">Enter a positive amount</string>
    <string name="privacy_and_security">Privacy and Security</string>
    <string name="pin_code_lock">PIN-code Lock</string>
    <string name="change_pin_code">Change PIN-code</string>
    <string name="unlock_with_fingerprint">Unlock with Fingerprint</string>
    <string name="set_pin_code">PIN-code Lock</string>
    <string name="touch_to_show_fingerprint_scanner">Touch to show fingerprint scanner</string>
    <string name="backspace" translatable="false">Backspace</string>
    <string name="app_icon">App Icon</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="pin" translatable="false">PIN</string>
    <string name="confirm_your_pin">Confirm your PIN</string>
    <string name="pin_code_is_incorrect">PIN Code is incorrect</string>
    <string name="enter_new_pin">Enter new PIN</string>
    <string name="login_in_the_debtbook">Login in the DebtBook</string>
</resources>