<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/payoffMessage"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialogMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/payoffTitle"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/dialogTitle"
        tools:layout_editor_absoluteX="24dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/okButton"
        style="@style/FilledButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/yes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogMessage" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelButton"
        style="@style/OutlineButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/No"
        app:layout_constraintEnd_toStartOf="@+id/okButton"
        app:layout_constraintTop_toTopOf="@+id/okButton" />

</androidx.constraintlayout.widget.ConstraintLayout>