<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:text="@string/rate_this_app"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="horizontal"
        android:paddingHorizontal="32dp"
        android:paddingVertical="8dp">

        <ImageView
            android:id="@+id/rateStar1ImageView"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_weight="1"
            android:paddingVertical="4dp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/baseline_star_rate_24" />

        <ImageView
            android:id="@+id/rateStar2ImageView"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_weight="1"
            android:paddingVertical="4dp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/baseline_star_rate_24" />

        <ImageView
            android:id="@+id/rateStar3ImageView"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_weight="1"
            android:paddingVertical="4dp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/baseline_star_rate_24" />

        <ImageView
            android:id="@+id/rateStar4ImageView"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_weight="1"
            android:paddingVertical="4dp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/baseline_star_rate_24" />

        <ImageView
            android:id="@+id/rateStar5ImageView"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_weight="1"
            android:paddingVertical="4dp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/baseline_star_rate_24" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirmButton"
            style="@style/FilledButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelButton"
            style="@style/OutlineButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/confirmButton"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>